re PR fortran/23151 (print (buf, format), expression should be invalid)

2006-05-26  Thomas Koenig  <Thomas.Koenig@online.de>

	PR fortran/23151
	* io.c (match_io):  print (1,*) is an error.

2006-05-26  Thomas Koenig  <Thomas.Koenig@online.de>

	PR fortran/23151
	* gfortran.dg/inquire_9.f90:  Fix illegal print syntax.
	* gfortran.dg/print_parentheses_1.f:  New test.
	* gfortran.dg/print_parentheses_2.f90:  New test.

From-SVN: r114138